<?xml version="1.0"?>
<package format="2">
  <name>ros_scxml</name>
  <version>0.0.0</version>
  <description>The ros scxml package</description>

  <maintainer email="wmccormick@todo.todo">wmccormick</maintainer>


  <license>TODO</license>



  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>
  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>std_msgs</depend>
  <depend>std_srvs</depend>

  <export>
  </export>
</package>
