<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>rclcpp_scxml_demos</name>
  <version>0.0.0</version>
  <description>Demo using ros2 with scmxl</description>
  <maintainer email="jrgichodevel@gmail.com">Jorge Nicho</maintainer>
  <license>BSD3</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>std_msgs</depend>
  <depend>std_srvs</depend>
  <depend>scxml_core</depend>
  <depend>rclcpp</depend>
  <depend>rclcpp_components</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
