<?xml version="1.0"?>
<package format="2">
  <name>roscpp_scxml_demos</name>
  <version>0.0.0</version>
  <description>The ros scxml package</description>

  <maintainer email="jrgnichodevel@gmail.com">Jorge Nicho</maintainer>

  <license>BSD3</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>std_msgs</depend>
  <depend>std_srvs</depend>
  <depend>scxml_core</depend>  

  <export>
  </export>
</package>
