<?xml version="1.0"?>
<package format="3">
  <name>scxml_core</name>
  <version>0.2.0</version>
  <description>The ros scxml package</description>

  <maintainer email="jrgnichodevel@gmail.com">Jorge Nicho</maintainer>
  <license>BSD3</license>

  <depend>ros_industrial_cmake_boilerplate</depend>
  <depend>tinyxml2</depend>

  <export>
    <build_type> cmake </build_type>
  </export>
</package>
